<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currency_converter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/currency_converter"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/current_time"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25dp">

            <TextView
                android:id="@+id/text_CurrencyFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:text="@string/text_currency_from"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/currency_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:entries="@array/currency_from"
                android:minHeight="48dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:autofillHints="Hello"
                android:ems="10"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:paddingStart="30dp"
                android:paddingEnd="20dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/text_CurrencyTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="5dp"
                android:text="@string/text_currency_to"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/currency_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:entries="@array/currency_to"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:autofillHints="Result"
                android:ems="10"
                android:hint="@string/result"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:paddingStart="30dp"
                android:paddingEnd="20dp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/convert_button"
            android:textSize="20sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:onClick="clearClicked"
            android:text="@string/clearAll"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/result2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="45dp"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>